# spinn_node/backend/routes/question.route.js
@@ -8,11 +8,13 @@ var viewQuestion = require('../controller/view-question');
 var removeQuestionById = require('../controller/delete-question');
 var modifyQuestionById = require('../controller/update-question');
 var searchQuestion = require('../controller/search-question');
+var listQuestion = require('../controller/list-question');
 var attemptQuestion = require('../controller/attempt-question');
 router.use('/addQuestion',addQuestion);
 router.use('/viewQuestion/',viewQuestion);
 router.use('/deleteQuestion/',removeQuestionById);
 router.use('/updateQuestion',modifyQuestionById);
 router.use('/searchQuestion',searchQuestion);
+router.use('/listQuestion',listQuestion);
 router.use('/attemptQuestion',attemptQuestion);
 module.exports = router;
